# QDB

./: .gitignore  NOTES.md  README.md  build_database.sh  fixtures.py  mudb.py  persons-test.qdb  persons.q  pyproject.toml  qdb-cli.py  run_tests.sh
persons.db/: 20250626_215144.hint  20250626_215144.ref
persons.qdb/: 20250628_175407.hint  20250628_175407.ref
qdb/: __init__.py  qdb_cli.py
qdb/lib/: datacache.py  exception.py  functions.py  io.py  ops.py  parser.py  qdb.py  query.py  session.py  storage.py  users.py  utils.py
src/: __init__.py  datacache.py  exception.py  microdb.py  mudb.py  ops.py  parser.py  qdb.py  query.py  storage.py  utils.py
tests/: get_refs_test.py
